// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VTextarea render should render component 1`] = `
<div
  class="field"
>
  <!---->
   
  <div
    class="control"
  >
    <textarea
      class="textarea"
      disabled="disabled"
      id="id"
      placeholder="placeholder"
    />
  </div>
</div>
`;

exports[`VTextarea render should render component with label 1`] = `
<div
  class="field"
>
  <label
    class="label"
  >
    Label
  </label>
   
  <div
    class="control"
  >
    <textarea
      class="textarea"
      disabled="disabled"
      id="id"
      placeholder="placeholder"
    />
  </div>
</div>
`;
